2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/groups/group_list.php: fixed pagination mismatch.
	
	Fixes: #2383

2013-08-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_snmp_browser.php: fixed PHP warnings.

2013-08-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: added supoport for disabled unknown
	events modules, components and policies.

2013-08-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor_common.php: added code to
	policy module editor with disabled unknown events modules.

2013-08-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php: fixed the massive copy modules
	between agents.

2013-08-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor.php,
	include/javascript/pandora_modules.js: implemented the disabled
	unknown events for local modules.

2013-08-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_manager.php: fixed the PHP warnings in the
	call to enterprise function.

2013-08-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* pandoradb.postgreSQL.sql, pandoradb.oracle.sql,
	godmode/agentes/module_manager_editor.php,
	godmode/agentes/module_manager_editor_common.php,
	godmode/agentes/configurar_agente.php,
	godmode/massive/massive_edit_modules.php,
	godmode/modules/manage_network_components_form_common.php,
	godmode/modules/manage_network_components.php,
	include/functions_events.php, include/functions.php,
	include/javascript/pandora_modules.js,
	include/functions_network_components.php,
	include/functions_modules.php, include/constants.php, pandoradb.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql: first version of
	disabled unknown events for modules, now it is implemented in
	modules, massive operations and components, but it is necesary in