@@ -1,5 +1,15 @@
 2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
 	
+	* operation/agentes/estado_generalagente.php: show a warning
+	message when the agent has not a assigned server.
+	
+	* operation/agentes/ver_agente.php: some changes for to make more
+	easy the merge with the trunk.
+	
+	MERGED FROM THE TRUNK.
+
+2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
+	
 	* godmode/groups/group_list.php: fixed pagination mismatch.
 	
 	Fixes: #2383
@@ -18,7 +28,8 @@
 	* godmode/agentes/module_manager_editor_common.php: added code to
 	policy module editor with disabled unknown events modules.
 
-2013-08-28 Miguel de Dios <miguel.dedios@artica.es>
+2013-08-28 Miguel de Dios <miguel.dedios@artica.
+es>
 	
 	* include/functions_modules.php: fixed the massive copy modules
 	between agents.
